# rpg_ig_active_reconstruction

./: .gitignore  README.md
example/flying_gazebo_stereo_cam/: CMakeLists.txt  package.xml
example/flying_gazebo_stereo_cam/config/: dome_6_views.txt~  yb_3_views.txt
example/flying_gazebo_stereo_cam/include/flying_gazebo_stereo_cam/: controller.hpp  yb_controller.hpp
example/flying_gazebo_stereo_cam/launch/: flying_gazebo_stereo_cam.launch  robot_interface.launch  simple_viewspace_module.launch
example/flying_gazebo_stereo_cam/model/: flying_stereo_cam.xacro  world.sdf~
example/flying_gazebo_stereo_cam/model/bunny/: model.sdf~
example/flying_gazebo_stereo_cam/model/bunny/meshes/: table-top-coffee.dae  table-top-tea-cup.dae  tea-maker.dae
example/flying_gazebo_stereo_cam/src/code_base/: .controller.cpp.swp  controller.cpp  robot_communication_interface.cpp  yb_controller.cpp
example/flying_gazebo_stereo_cam/src/ros_nodes/: robot_interface.cpp
ig_active_reconstruction/: package.xml
ig_active_reconstruction/include/ig_active_reconstruction/: basic_view_planner.hpp  utility_calculator.hpp  weighted_linear_utility.hpp  youbot_communication_interface.hpp
ig_active_reconstruction/src/code_base/: basic_view_planner.cpp  view_space.cpp  weighted_linear_utility.cpp  world_representation_pinhole_cam_raycaster.cpp
ig_active_reconstruction_msgs/: CMakeLists.txt
ig_active_reconstruction_msgs/action/: PerceiveLocation.action
ig_active_reconstruction_msgs/msg/: StringMsgs.msg
ig_active_reconstruction_msgs/srv/: yb_move_arm_using_joints.srv  youbotMoveToInit.srv  youbotObjectDetector.srv
ig_active_reconstruction_octomap/include/ig_active_reconstruction_octomap/: octomap_ig_tree.hpp  octomap_ig_tree_node.hpp  octomap_information_gain.hpp  octomap_std_pcl_input.hpp  octomap_world_representation.hpp
ig_active_reconstruction_octomap/include/ig_active_reconstruction_octomap/ig/: vasquez_gomez_area_factor.hpp
ig_active_reconstruction_octomap/launch/: octomap_world_representation.launch
ig_active_reconstruction_octomap/src/code_base/: factory.inl  octomap_basic_ray_ig_calculator.inl  octomap_information_gain.inl  octomap_ray_occlusion_calculator.inl  octomap_ros_interface.inl  octomap_std_pcl_input.inl
ig_active_reconstruction_octomap/src/code_base/ig/: proximity_count.inl  rear_side_entropy.inl  rear_side_voxel.inl  vasquez_gomez_area_factor.inl
ig_active_reconstruction_octomap/src/ros_nodes/: octomap_world_representation.cpp
ig_active_reconstruction_ros/: CMakeLists.txt  package.xml
ig_active_reconstruction_ros/include/ig_active_reconstruction_ros/: youbot_ros_client.hpp
ig_active_reconstruction_ros/launch/: basic_view_planner.launch
ig_active_reconstruction_ros/src/code_base/: world_representation_ros_client_ci.cpp  world_representation_ros_server_ci.inl  youbot_ros_client.cpp
ig_active_reconstruction_ros/src/ros_nodes/: basic_view_planner.cpp  simple_viewspace_module.cpp
ig_active_reconstruction_yb/: CMakeLists.txt  package.xml
ig_active_reconstruction_yb/include/ig_active_reconstruction_yb/: robot_communication_interface.hpp  robot_movement_cost.hpp  view.hpp  view_space.hpp
ig_active_reconstruction_yb/src/codes/: view.cpp
ig_active_reconstruction_youbot/: CMakeLists.txt  package.xml
ig_active_reconstruction_youbot/config/: ($arg ws)_6_views_poses.txt  .topics.yaml.swp  .yb_24_views_workstations.txt.swp  topics.yaml  ws01_5_views_poses.txt  ws01_6_views_poses.txt  ws02_5_views_poses.txt  ws02_6_views_poses.txt  ws03_5_views_poses.txt  ws03_6_views_poses.txt  ws04_5_views_poses.txt  ws04_6_views_poses.txt  yb_14_views_joints.txt  yb_14_views_poses.txt  yb_14_views_workstations.txt  yb_24_views_joints.txt  yb_24_views_poses.txt  yb_24_views_workstations.txt  yb_44_views_joints.txt  yb_44_views_poses.txt  yb_44_views_workstations.txt  yb_4_joint_configuration.txt  yb_5_views_joints.txt  yb_6_views.txt  yb_6_views_joints.txt  yb_6_views_joints.txt.odom  yb_6_views_joints.txt~  yb_6_views_poses.txt  yb_6_views_poses.txt.map  yb_6_views_poses.txt~  yb_6_views_workstations.txt
ig_active_reconstruction_youbot/include/ig_active_reconstruction_youbot/: robot_ros_server_ci.hpp  yb_moveit_action.hpp  yb_ros_client.hpp  yb_ros_server.hpp  yb_view_space.hpp
ig_active_reconstruction_youbot/launch/: logging.launch  yb_cam_to_octomap.launch  yb_joints_to_pose_converter.launch  yb_move_base_safe.launch  yb_moveit_commander.launch  yb_ros_server_node.launch
ig_active_reconstruction_youbot/src/codes/: robot_ros_server_ci.cpp.  yb_moveit_action.cpp.  yb_ros_client.cpp.  yb_ros_server.cpp  yb_view_space.cpp
ig_active_reconstruction_youbot/src/nodes/: save_pose_to_file  yb_joints_to_pose_converter.cpp  yb_move_base_safe.cpp  yb_moveit_commander.cpp  yb_moveit_commander.py  yb_perceive_location_client_node.py  yb_ros_server_node.cpp  yb_trigger_cloud_e_add_cloud_start.cpp  yb_trigger_cloud_e_start_publish.cpp  yb_trigger_robocup_topics.cpp
ig_active_reconstruction_youbot/srv/: ybMoveArmTo.srv  yb_move_arm_using_joints.srv
ig_youbot_ros_implementation/: CMakeLists.txt  package.xml
ig_youbot_ros_implementation/config/: yb_6_views_poses.txt.odom  yb_6_views_poses.txt.ws01
ig_youbot_ros_implementation/include/ig_youbot_ros_implementation/: controller.hpp  robot_communication_interface.hpp
ig_youbot_ros_implementation/launch/: ig_youbot_ros_implementation.launch  robot_interface.launch  robot_interface.rviz  simple_viewspace_module.launch
ig_youbot_ros_implementation/model/: flying_stereo_cam.xacro
ig_youbot_ros_implementation/model/bunny/: How_to_change_the_model  model.sdf
ig_youbot_ros_implementation/src/codes/: controller.cpp  pcl_rerouter.cpp  robot_communication_interface.cpp
ig_youbot_ros_implementation/src/nodes/: robot_interface.cpp
launch_file/: moveit_planning.launch
